# super-scorpio

./: CMakeLists.txt  README.md  auto_set_url.cmake
main/: CMakeLists.txt  common.c  common.h  main.c
main/channel_control/: channel_control.c  channel_control.h  pwm_feeds.c  pwm_feeds.h  pwm_slices.c  pwm_slices.h
main/channel_discovery/: channel_discovery.c  channel_discovery.h
main/channel_layouts/: channel_layouts.c  channel_layouts.h  linear_layout.c  linear_layout.h  reverse_layout.c  reverse_layout.h
main/channel_overrides/: channel_overrides.c  channel_overrides.h
main/pixel_channels/: pixel_channels.c  pixel_channels.h  rx_channels.c  rx_channels.h  tx_channels.c  tx_channels.h
main/pixel_feeds/: empty_feed.c  empty_feed.h  on_off_feed.c  on_off_feed.h  pixel_feed_base.h  pixel_feeds.c  pixel_feeds.h  rx_channel_feed.c  rx_channel_feed.h
main/pixel_rx/: pixel_rx.c  pixel_rx.h
main/pixel_rx_loop/: gpio_pins_to_rx_bytes.pio  pixel_rx_loop.c  pixel_rx_loop.h  rx_bytes_feeds.c  rx_bytes_feeds.h
main/pixel_tx/: gpio_tx_pins.c  gpio_tx_pins.h  irq_handling.c  irq_handling.h  pixel_tx.c  pixel_tx.h  pwm_cc_feed.c  pwm_cc_feed.h  pwm_cc_feed_director.c  pwm_cc_feed_director.h  pwm_cc_feed_discard.c  pwm_cc_feed_discard.h  pwm_cc_feed_trigger.c  pwm_cc_feed_trigger.h  pwm_tx_slices.c  pwm_tx_slices.h  tx_bytes_buffer.c  tx_bytes_buffer.h  tx_bytes_feed.c  tx_bytes_feed.h  tx_bytes_feed_director.c  tx_bytes_feed_director.h  tx_bytes_to_pwm_cc.pio  tx_bytes_to_pwm_cc.pio.sav  tx_pixels_buffer.c  tx_pixels_buffer.h
main/pixel_tx_loop/: pixel_tx_loop.c  pixel_tx_loop.h  tx_bytes_feed.c  tx_bytes_feed.h  tx_bytes_to_gpio_pins.pio  tx_data_feeds.c  tx_data_feeds.h  tx_pixels.c  tx_pixels.h
main/power_limiter/: power_limiter.c  power_limiter.h
main/power_monitor/: power_monitor.c  power_monitor.h  power_monitor_adc.c  power_monitor_adc.h  power_monitor_feed.c  power_monitor_feed.h  power_samples.c  power_samples.h
main/tick_log/: tick_log.c  tick_log.h
